# ROS2-ROSA-Test

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/turtle_agent/lib/turtle_agent/: prompts.py  service_node.py
install/turtle_agent/lib/turtle_agent/tools/: turtle copy 2.py  turtle(edited).py
install/turtle_agent/share/ament_index/resource_index/parent_prefix_path/: turtle_agent
install/turtle_agent/share/turtle_agent/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtle_agent/share/turtle_agent/launch/: service_test_launch.py
install/turtle_agent/share/turtle_agent/scripts/: llm.py  test_inp.py  turtle_agent(edited ver).py
install/turtle_agent/share/turtle_agent/scripts/tools/: turtle.py  turtle_original.py
log/: latest_build
src/: .env
src/turtle_agent/: CMakeLists.txt  package.xml
src/turtle_agent/launch/: turtle_agent_launch.py
src/turtle_agent/scripts/: llm.py  prompts.py  turtle_agent.py
src/turtle_agent/scripts/tools/: turtle(original).py  turtle.py
